uses token for create article
